# mkdocs-chatbot

./: .dockerignore  .pre-commit-config.yaml  404.html  Dockerfile  README.md  index.html  mkdocs.yaml  pyproject.toml
.github/workflows/: ci.yml  publish.yml  release.yml
app/: main.py  pyproject.toml
backend_setup/: index.html
docs/: backend_setup.md  index.md
example/: index.html
search/: search_index.json
src/mkdocs_chatbot/: plugin.py
src/mkdocs_chatbot/overrides/: main.html
