[project]
name = "app"
version = "0.1.0"
description = "A Streamlit-based chatbot application that provides an interactive AI-powered interface to chat with the mkdocs-chatbot plugin documentation."
readme = "README.md"
requires-python = ">=3.12, <4.0"
dependencies = [
    "llama-index==0.14.14",
    "llama-index-embeddings-google-genai==0.3.2",
    "llama-index-llms-google-genai==0.8.7",
    "streamlit==1.54.0",
]

[tool.poetry]
package-mode = false
